try fixing issue on perspective on iphone

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -11,6 +11,7 @@
     margin-top: -10%;
     margin-left: -20%;
     max-width: 50%;
+    -webkit-perspective-origin-x: 100%;
     -webkit-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2);
 }
@@ -30,6 +31,7 @@
     left: -25%;
     bottom: -20%;
     width: 40%;
+    -webkit-perspective-origin-x: 100%;
     -webkit-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2);
 }
