--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    -webkit-perspective-origin-x: 100%;
 }
 
 .page {
